# cpp-smpp

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt
src/smpp/: pdu.cc  smppclient.cc  smppclient.h  timeformat.cc
test/: CMakeLists.txt  smppclient_receive_test.cc  smppclient_test.cc  smppclient_test.h  time_test.cc
